--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -4,14 +4,9 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+body,
+html {
+  background: #080a0b;
 }
 
 @layer utilities {
